chore: new bulb integration and zone notifications
- adding two bulbs as living room over head light
- adding some notifications around zone presence to understand better if
  that is working well

--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -39,6 +39,11 @@ light:
     entities:
       - light.bathroom
       - light.bathroom_lamp
+  - platform: group
+    name: Living Room Overhead Light
+    entities:
+      - light.living_room_overhead_thread
+      - light.living_room_overhead_wifi
 
 # Mixed entity groups (lights + switches)
 group:
