--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -44,6 +44,12 @@ light:
     entities:
       - light.living_room_overhead_thread
       - light.living_room_overhead_wifi
+  - platform: group
+    name: Living Room Lights
+    entities:
+      - light.living_room_light
+      - light.living_room_overhead_thread
+      - light.living_room_overhead_wifi
 
 # Mixed entity groups (lights + switches)
 group:
