--- a/config/automations/charlie_s_room_presence.yaml
+++ b/config/automations/charlie_s_room_presence.yaml
@@ -16,6 +16,11 @@ actions:
           - condition: trigger
             id: charlie_home
         sequence:
+          - action: notify.mobile_app_john_allens_iphone
+            data:
+              title: "HA Presence: Charlie Arrived"
+              message: >-
+                HA thinks Charlie arrived at {{ now().strftime('%-I:%M %p') }}
           - action: light.turn_on
             target:
               entity_id: light.charlie_s_shapes
@@ -26,6 +31,11 @@ actions:
           - condition: trigger
             id: charlie_away
         sequence:
+          - action: notify.mobile_app_john_allens_iphone
+            data:
+              title: "HA Presence: Charlie Left"
+              message: >-
+                HA thinks Charlie left at {{ now().strftime('%-I:%M %p') }}
           - action: light.turn_off
             target:
               entity_id: light.charlie_s_shapes
