feat(presence): add Charlie presence sensor with GPS+WiFi+timeout
Add binary_sensor.charlie_home that combines GPS and WiFi trackers:
- Uses WiFi as authoritative 'not home' signal
- Requires fresh GPS data (< 15 min) to confirm 'home'
- Exposes gps_state, wifi_state, and gps_age_minutes as attributes

Update Charlie's Room Presence automation to use the new sensor.

Also adjust kitchen scripts:
- kitchen_chill: remove 60% brightness cap
- charlie_eating: add 50% minimum brightness floor

--- a/config/automations/charlie_s_room_presence.yaml
+++ b/config/automations/charlie_s_room_presence.yaml
@@ -1,14 +1,14 @@
 id: '1765129357442'
 alias: "Charlie's Room Presence"
-description: "Control Charlie's room devices based on his iPhone presence - Shapes light and sound machine"
+description: "Control Charlie's room devices based on presence - Shapes light and sound machine. Uses custom binary sensor with GPS + WiFi fallback and staleness timeout."
 triggers:
   - trigger: state
-    entity_id: device_tracker.charlies_iphone
-    to: "home"
+    entity_id: binary_sensor.charlie_home
+    to: "on"
     id: charlie_home
   - trigger: state
-    entity_id: device_tracker.charlies_iphone
-    to: "not_home"
+    entity_id: binary_sensor.charlie_home
+    to: "off"
     id: charlie_away
 actions:
   - choose:
