--- a/config/automations/living_room_presence_lighting.yaml
+++ b/config/automations/living_room_presence_lighting.yaml
@@ -21,10 +21,15 @@ triggers:
 
 actions:
   - choose:
-      # Presence detected - turn on with adaptive lighting
+      # Presence detected - turn on with adaptive lighting (but not if TV is on)
       - conditions:
           - condition: trigger
             id: presence_on
+          - condition: not
+            conditions:
+              - condition: state
+                entity_id: media_player.lg_webos_tv_oled65c3aua
+                state: "on"
         sequence:
           - action: script.lights
             data:
