fix(arrival): only turn on kitchen lights when arriving home
- Replace scene.good_morning with script.lights targeting only kitchen_lights
- Uses same adaptive lighting logic as kitchen presence detection
- Prevents unwanted living room light activation on arrival

--- a/config/automations/arriving_home.yaml
+++ b/config/automations/arriving_home.yaml
@@ -8,9 +8,10 @@ triggers:
     event: enter
 conditions: []
 actions:
-  - action: scene.turn_on
-    metadata: {}
-    data: {}
-    target:
-      entity_id: scene.good_morning
+  - action: script.lights
+    data:
+      lights:
+        - light.kitchen_lights
+      night_mode: dim_warm
+      night_brightness: 15
 mode: single
