--- a/config/automations/dads_bedroom_button.yaml
+++ b/config/automations/dads_bedroom_button.yaml
@@ -30,9 +30,7 @@ actions:
           - condition: template
             value_template: '{{ state_attr(''event.bedside_button_button'', ''event_type'') == ''multi_press_2'' }}'
         sequence:
-          - action: script.turn_on
-            target:
-              entity_id: script.good_morning
+          - action: script.bedroom_lights
       - conditions:
           - condition: template
             value_template: '{{ state_attr(''event.bedside_button_button'', ''event_type'') == ''long_press'' }}'
