--- a/config/automations/kitchen_presence_lighting.yaml
+++ b/config/automations/kitchen_presence_lighting.yaml
@@ -39,11 +39,10 @@ actions:
             id: presence_off
         sequence:
           - wait_for_trigger:
-              trigger:
-                - trigger: state
-                  entity_id: binary_sensor.kitchen_presence_kitchen
-                  to: "on"
-              timeout: "00:00:30"
+              - platform: state
+                entity_id: binary_sensor.kitchen_presence_kitchen
+                to: "on"
+            timeout: "00:00:30"
           - if:
               - condition: template
                 value_template: "{{ wait.trigger is none }}"
