--- a/esphome/atom-echo.yaml
+++ b/esphome/atom-echo.yaml
@@ -1,6 +1,6 @@
 esphome:
   name: atom-echo
-  friendly_name: Atom Echo
+  friendly_name: Atom Echo BT Proxy
   platformio_options:
     board_build.flash_mode: dio
 
@@ -32,92 +32,15 @@ wifi:
 
 captive_portal:
 
-# I2S Audio for microphone
-i2s_audio:
-  - id: i2s_in
-    i2s_lrclk_pin: GPIO33
-    i2s_bclk_pin: GPIO19
+# Bluetooth Proxy
+esp32_ble_tracker:
+  scan_parameters:
+    interval: 1100ms
+    window: 1100ms
+    active: true
 
-# Microphone (SPM1423 PDM)
-microphone:
-  - platform: i2s_audio
-    id: echo_microphone
-    i2s_din_pin: GPIO23
-    adc_type: external
-    pdm: true
-    sample_rate: 16000
-    correct_dc_offset: true
-
-# Speaker (via I2S)
-speaker:
-  - platform: i2s_audio
-    id: echo_speaker
-    i2s_dout_pin: GPIO22
-    dac_type: external
-    i2s_mode: primary
-    bits_per_sample: 16bit
-    sample_rate: 16000
-    channel: stereo
-    buffer_duration: 60ms
-
-# Voice Assistant
-voice_assistant:
-  id: va
-  microphone:
-    microphone: echo_microphone
-    channels: 0
-    gain_factor: 4
-  speaker: echo_speaker
-  use_wake_word: true
-  noise_suppression_level: 2
-  auto_gain: 31dBFS
-  volume_multiplier: 2.0
-  on_client_connected:
-    - delay: 1s
-    - if:
-        condition:
-          not:
-            voice_assistant.is_running:
-        then:
-          - voice_assistant.start_continuous:
-  on_client_disconnected:
-    - voice_assistant.stop:
-  on_listening:
-    - light.turn_on:
-        id: led
-        blue: 100%
-        red: 0%
-        green: 0%
-        effect: "Slow Pulse"
-  on_stt_end:
-    - light.turn_on:
-        id: led
-        blue: 100%
-        red: 0%
-        green: 0%
-        effect: "Fast Pulse"
-  on_tts_start:
-    - light.turn_on:
-        id: led
-        blue: 0%
-        red: 0%
-        green: 100%
-        effect: none
-  on_end:
-    - delay: 100ms
-    - wait_until:
-        not:
-          speaker.is_playing:
-    - light.turn_off: led
-  on_error:
-    - light.turn_on:
-        id: led
-        red: 100%
-        green: 0%
-        blue: 0%
-        effect: none
-    - delay: 1s
-    - light.turn_off: led
+bluetooth_proxy:
+  active: true
 
 # Button
 binary_sensor:
@@ -127,11 +50,17 @@ binary_sensor:
       inverted: true
     name: "Button"
     on_press:
-      - voice_assistant.start:
+      - light.turn_on:
+          id: led
+          red: 0%
+          green: 100%
+          blue: 0%
+          brightness: 100%
     on_release:
-      - voice_assistant.stop:
+      - light.turn_off: led
 
-# LED (SK6812)
+
+# LED (SK6812) - shows BT proxy status
 light:
   - platform: esp32_rmt_led_strip
     id: led
@@ -140,16 +69,4 @@ light:
     num_leds: 1
     rgb_order: GRB
     chipset: SK6812
-    effects:
-      - pulse:
-          name: "Slow Pulse"
-          transition_length: 250ms
-          update_interval: 250ms
-          min_brightness: 50%
-          max_brightness: 100%
-      - pulse:
-          name: "Fast Pulse"
-          transition_length: 100ms
-          update_interval: 100ms
-          min_brightness: 50%
-          max_brightness: 100%
+    # LED will be off by default, green when button pressed
