refactor(arriving_home): trigger kitchen presence automation instead of direct light control
Simplify arrival behavior by delegating to the kitchen presence automation
rather than directly calling script.lights. This ensures consistent
adaptive lighting and timeout behavior without affecting living room.

--- a/config/automations/arriving_home.yaml
+++ b/config/automations/arriving_home.yaml
@@ -1,6 +1,6 @@
 id: '1762718598905'
 alias: Arriving home
-description: ''
+description: "Triggers kitchen presence lighting when arriving home"
 triggers:
   - trigger: zone
     entity_id: person.john_allen
@@ -8,10 +8,7 @@ triggers:
     event: enter
 conditions: []
 actions:
-  - action: script.lights
-    data:
-      lights:
-        - light.kitchen_lights
-      night_mode: dim_warm
-      night_brightness: 15
+  - action: automation.trigger
+    target:
+      entity_id: automation.kitchen_presence_lighting
 mode: single
