feat(presence): track the kid manually
phone presence doesn't work because he leaves it behind when at his
mom's

--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -61,6 +61,12 @@ group:
       - light.hue_lightstrip_plus_1
       - switch.kitchen_counter_switch
 
+input_boolean:
+  charlie_presence:
+    name: "Charlie's Presence"
+    icon: mdi:account
+    initial: false
+
 # Helpers
 input_number:
   bathroom_motion_timeout:
