--- a/config/exposed_entities.yaml
+++ b/config/exposed_entities.yaml
@@ -36,3 +36,10 @@ script.good_morning: true
 script.kitchen_chill: true
 script.tv_time: true
 script.winding_down: true
+
+# Helpers
+input_boolean.charlie_s_presence: true
+
+# Charlie presence scripts
+script.charlies_home: true
+script.charlies_away: true
