--- a/config/homekit_exposed.yaml
+++ b/config/homekit_exposed.yaml
@@ -32,6 +32,10 @@ include_entities:
   - switch.kitchen_counter_switch
   - switch.laundry_room_switch
   - switch.sound_machine_outlet
+  - input_boolean.charlie_s_presence
+  # Charlie presence scripts
+  - script.charlies_home
+  - script.charlies_away
 
 # Entities to exclude (from included domains)
 exclude_entities:
