feat(lighting): add camera-aware lighting automation
- Add 'On Camera' scene with full brightness (255) and daylight color (5076K)
- Reduce 'Working' scene brightness to 150 with warmer 3500K for comfort
- Add automation to switch scenes based on MacBook camera sensor state

--- a/config/scenes/on_camera.yaml
+++ b/config/scenes/on_camera.yaml
@@ -1,5 +1,5 @@
-id: '1762785763071'
-name: Working
+id: '1734358800001'
+name: On Camera
 entities:
   light.island_bulb:
     state: 'off'
@@ -13,17 +13,17 @@ entities:
     state: 'off'
   light.bedroom_lamp:
     state: 'on'
-    brightness: 150
-    color_temp_kelvin: 3500
+    brightness: 255
+    color_temp_kelvin: 5076
   light.bedroom_overhead_left:
     state: 'on'
-    brightness: 150
-    color_temp_kelvin: 3500
+    brightness: 255
+    color_temp_kelvin: 5076
   light.bedroom_overhead_right:
     state: 'on'
-    brightness: 150
-    color_temp_kelvin: 3500
+    brightness: 255
+    color_temp_kelvin: 5076
   switch.kitchen_counter_switch:
     state: 'off'
-icon: mdi:laptop
+icon: mdi:camera
 metadata: {}
