fix: change coffee ready alert mode to restart for multiple triggers
The automation was in 'single' mode which only triggers once per cycle,
preventing re-triggering when temperature fluctuates above the threshold.
Changed to 'restart' mode to allow multiple alerts as coffee heats/cooled.

--- a/config/automations/coffee_ready_alert.yaml
+++ b/config/automations/coffee_ready_alert.yaml
@@ -13,4 +13,4 @@ actions:
       title: "Coffee Ready!"
       message: >-
         Your coffee is ready! Current temp: {{ states('sensor.ember_mug_e87720e9d7b9_current_temp') | round(0) }}°F
-mode: single
+mode: restart
